Bug 249876 - [IFC] Incorrect soft wrap opportunity with trailing inline box
Summary: [IFC] Incorrect soft wrap opportunity with trailing inline box
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-12-24 19:31 PST by zalan
Modified: 2022-12-25 07:25 PST (History)
5 users (show)

See Also:


Attachments
Patch (6.58 KB, patch)
2022-12-24 19:46 PST, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2022-12-24 19:31:52 PST
ssia
Comment 1 zalan 2022-12-24 19:46:37 PST
Created attachment 464200 [details]
Patch
Comment 2 EWS 2022-12-25 07:24:28 PST
Committed 258329@main (9ed51cd07fc8): <https://commits.webkit.org/258329@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 464200 [details].
Comment 3 Radar WebKit Bug Importer 2022-12-25 07:25:17 PST
<rdar://problem/103695991>