[IFC] Incorrect soft wrap opportunity with trailing inline box https://bugs.webkit.org/show_bug.cgi?id=249876

Reviewed by Antti Koivisto.

The soft wrap opportunity when there are inline boxes in-between the inline content is
the position right before the first inline box that encloses the trailing content (if there's any).
e.g.
 <div>soft wrap is af-<span id=here></span>ter the span with 'here' id</div>
 <div>soft wrap is af-<span id=here><span></span></span>ter the span with 'here' id</div>
 <div>soft wrap is af-<span id=here><span></span></span><span>ter the span with 'here' id</span></div>

* LayoutTests/fast/inline/trailing-inline-box-soft-wrap-opportunity-expected.html: Added.
* LayoutTests/fast/inline/trailing-inline-box-soft-wrap-opportunity.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::nextWrapOpportunity const):

Canonical link: https://commits.webkit.org/258329@main